 8. If "track" custom actions are defined, then always keep composer, etc,
    details in now-playing for use in actions.
 9. Only show "Go to composer", etc., items in now-playing context menu if
    configured to show relevant artist role.
10. Use alternative blur for now-playing backgroud, so that works with
    WebKitGTK.
11. Pre-cache HighDPI covers, thanks to Michael Herger.

3.5.4
-----
1. Fix missing album review for streaming services.
2. Remove commas from "performed by", etc. in desktop now-playing bar.

3.5.3
-----
1. Update translations.
2. Dim more player details in 'Manage players' dialog for switched off
   players.
3. Fix now-playing covers for old browsers (e.g. old iOS) that don't support
   CSS min()
4. Change "Performed by" to "performed by", etc.
5. Fix showing multiple composers, etc, in MAI view.
6. Fix cover URL in MAI.
7. Fix HTML appearing in disc selection dialog.
8. If LMS indicates multi-disc but album only has 1 then don't show choice
   dialog.

3.5.2
-----
1. Revert back to "img" tags for no-playing images, resolves loading of plugin
   PNGs.
2. Ensure no repeated textkeys (apart from years).
3. Adjust grid view margins, thanks to Denys Lysiuk.
4. Remove now-playing shadow.
5. Fix showing artist first or last with context.

3.5.1
-----
1. Display replaygain value even if positive or zero.
2. Only use 2 decimal places for replaygain.
3. Fix missing bitrate from tech info.
4. Don't allow to expand now-playing if nothing playing.
5. Treat covers in queue as per now-playing, i.e. don't clip and add
   background if required.
6. Use material icons for tracks note and selection count checkbox instead of
   unicode characters.
7. Only show current track's replaygain value if it's non-zero.
8. Only show artist context (e.g. XX From YY) for local, Deezer, Spotify,
   Tidal, Qobuz, or Radio Paradise tracks.
9. Only use mobile-scroll hack for Android and iOS.

3.5.0
-----
 1. Add setting to toggle rounded covers.